Bug 200987 - The modification of 'Show In Menu' properties are not saved when users logout KDE with konsole still running.
Summary: The modification of 'Show In Menu' properties are not saved when users logout...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6.6
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 215872 245304 266381 281916 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-21 14:22 UTC by Thomas Heuving
Modified: 2011-10-06 10:00 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Heuving 2009-07-21 14:22:15 UTC
Version:           2.2.3 (using 4.2.4 (KDE 4.2.4) "release 2", KDE:42 / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.23-0.1-pae

I have a number of different profiles defined and want them to be shown in the menu. If I say so, they are indeed shown in the menu, but the next time I start konsole, the entries are gone and the message "keine Profile vorhanden" (no profile available) is shown. I then activate them another time and the profiles I choosed are shown another time, but on the next reboot I have to do the same. Quite annoying.
Comment 1 Christian Trippe 2009-08-27 12:42:16 UTC
Still present with KDE 4.3 on openSUSE.
Comment 2 Andreas Mair 2009-09-03 10:10:24 UTC
For me it's similar: no matter how often I tell konsole to show all profiles in its menu it will only show the first one (=Shell) after restarting.
This happened on on KDE 4.2.4 and 4.3.0 on Gentoo Linux.
Comment 3 Andrew Schulman 2009-10-14 16:37:10 UTC
Same problem here.  I have 6 profiles.  After a restart, only the first three are shown in the profile menu.  To see the others there I have to reenable them in the profile management dialog.

Can we change the status to CONFIRMED?

Thanks,
Andrew.
Comment 4 Andrew Schulman 2009-10-14 16:38:41 UTC
*** This bug has been confirmed by popular vote. ***
Comment 5 Mark Goldstein 2009-11-21 11:18:43 UTC
This is quite important for me, since I could not find another way to simulate KDE3 console sessions (shell - mc - root - root/mc and so on).
Comment 6 Andreas Mair 2009-11-21 13:19:55 UTC
Hi,

meanwhile my configured profiles are all shown. What I did (IIRC) was to close all konsole windows but one. Then set all profiles to show in the menu and close the last konsole window. After opening konsole again the profiles are shown in the menu. Now it works even after rebooting.

I guess that konsole forgets to save its configuration on KDE close or each konsole window has its own configuration state and only the state of the last closed window is saved.

Regards,
Andreas
Comment 7 Mark Goldstein 2009-11-21 16:23:49 UTC
Andreas,

Your workaround worked for me.
Thanks a lot!

Regards,
-- Mark
Comment 8 Kurt Hindenburg 2009-12-29 16:22:26 UTC
*** Bug 215872 has been marked as a duplicate of this bug. ***
Comment 9 Eckhart Wörner 2010-04-01 18:26:26 UTC
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=576148 seems to be a duplicate of this and suggests this is an l10n flaw.
Comment 10 Mark Goldstein 2010-04-01 19:24:09 UTC
(In reply to comment #9)
> http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=576148 seems to be a duplicate
> of this and suggests this is an l10n flaw.

I´m not sure it is related to language. I do have 2 additional languages installed, but my default in KDE is English. From the other side, when I used the workaround suggested in comment #6, it worked for me with the same set of languages.
Comment 11 Achim Schaefer 2010-05-11 22:01:33 UTC
Same problem still in 4.4.3(Debian)
Comment 12 Mark T. Kennedy 2010-12-08 17:31:36 UTC
and the problem continues to exist in KDE 4.5.3 (FC14).
Comment 13 Jekyll Wu 2011-07-25 16:31:50 UTC
This seems fixed in 4.7rc2. 

At least it works well for me, no workaround need.
Comment 14 Jekyll Wu 2011-07-30 15:18:48 UTC
*** Bug 266381 has been marked as a duplicate of this bug. ***
Comment 15 Jekyll Wu 2011-07-30 19:19:42 UTC
*** Bug 245304 has been marked as a duplicate of this bug. ***
Comment 16 Peter D. 2011-08-01 05:33:37 UTC
It appears that the configuration is not being saved when it says it is, neither is it saved when KDE exits, only when Konsole is exited explicitly with "exit".
Comment 17 Jekyll Wu 2011-08-04 01:21:48 UTC
From my understanding of current konsole code:

1). default/show-in-menu/shortcut settings in the 'manage profile dialog' are not written into disk until konsole exits normally.

2). If you logout KDE with konsole still running, above settings are not saved.So they are lost when you login later.
Comment 18 peter_s_d 2011-08-15 03:18:08 UTC
(In reply to comment #17)
> From my understanding of current konsole code:
> 
> 1). default/show-in-menu/shortcut settings in the 'manage profile dialog' are
> not written into disk until konsole exits normally.

That would be a bug.  In fact, *the* bug that this bug report is about.  

> 2). If you logout KDE with konsole still running, above settings are not
> saved.So they are lost when you login later.
Comment 19 Jekyll Wu 2011-09-13 09:13:47 UTC
*** Bug 281916 has been marked as a duplicate of this bug. ***
Comment 20 Jekyll Wu 2011-10-06 10:00:00 UTC
Git commit ae44eb4c4b552f60572cf86402674a2936651594 by Jekyll Wu.
Committed on 06/10/2011 at 11:12.
Pushed by jekyllwu into branch 'master'.

Save default-profile/favorites/shortcuts settings into disk ASAP.

Those settings are now synced into disk right after the
ManageProfilesDialog is closed.

BUG: 200987
FIXED-IN: 4.8
REVIEW:102781

M  +1    -1    src/Application.cpp
M  +7    -0    src/ManageProfilesDialog.cpp
M  +2    -0    src/ManageProfilesDialog.h
M  +1    -1    src/Part.cpp
M  +10   -1    src/SessionManager.cpp
M  +5    -5    src/SessionManager.h

http://commits.kde.org/konsole/ae44eb4c4b552f60572cf86402674a2936651594