Save default-profile/favorites/shortcuts settings into disk ASAP.

Those settings are now synced into disk right after the
ManageProfilesDialog is closed.

BUG: 200987
FIXED-IN: 4.8
REVIEW:102781