src/ManageProfilesDialog.cpp
@@ -50,6 +50,7 @@ ManageProfilesDialog::ManageProfilesDialog(QWidget* parent)
     setButtons( KDialog::Close );
 
     connect( this, SIGNAL(applyClicked()) , this , SLOT(setMenuOrder()) );
+    connect( this, SIGNAL(finished()) , this , SLOT(onFinished()) );
 
     _ui = new Ui::ManageProfilesDialog();
     _ui->setupUi(mainWidget());
@@ -115,6 +116,12 @@ ManageProfilesDialog::~ManageProfilesDialog()
 {
     delete _ui;
 }
+
+void ManageProfilesDialog::onFinished()
+{
+    SessionManager::instance()->saveSettings();
+}
+
 void ManageProfilesDialog::itemDataChanged(QStandardItem* item)
 {
    if ( item->column() == ShortcutColumn )
