src/ManageProfilesDialog.h
@@ -99,6 +99,8 @@ private slots:
 
     void setMenuOrder(void);
 
+    static void onFinished() ;
+
 private:
     Profile::Ptr currentProfile() const; 
     QList<Profile::Ptr> selectedProfiles() const; 
